// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<JobActionIcon /> > should render when [state="complete"] and [canArchive=false] 1`] = `""`;

exports[`<JobActionIcon /> > should render when [state="waiting"] and [canCancel=false] 1`] = `""`;

exports[`<JobActionIcon /> > should render when [state=%p] cancelled 1`] = `
<Icon
  color="red"
  name="archive"
  onClick={[MockFunction spy]}
/>
`;

exports[`<JobActionIcon /> > should render when [state=%p] complete 1`] = `
<Icon
  color="red"
  name="archive"
  onClick={[MockFunction spy]}
/>
`;

exports[`<JobActionIcon /> > should render when [state=%p] error 1`] = `
<Icon
  color="red"
  name="archive"
  onClick={[MockFunction spy]}
/>
`;

exports[`<JobActionIcon /> > should render when [state=%p] running 1`] = `
<Icon
  color="red"
  name="ban"
  onClick={[MockFunction spy]}
/>
`;

exports[`<JobActionIcon /> > should render when [state=%p] waiting 1`] = `
<Icon
  color="red"
  name="ban"
  onClick={[MockFunction spy]}
/>
`;
